--- a/dllRifle.vcxproj.filters
+++ b/dllRifle.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="src\core\inject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\core\process.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\core\main.h" />
@@ -28,6 +31,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\include.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\process.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
