--- a/dllRifle.vcxproj
+++ b/dllRifle.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\core\dll.cpp" />
     <ClCompile Include="src\core\inject.cpp" />
     <ClCompile Include="src\core\process.cpp" />
     <ClCompile Include="src\core\main.cpp" />
@@ -148,8 +149,9 @@
     <None Include="src\core\main.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\core\definition.h" />
+    <ClInclude Include="src\core\dll.h" />
     <ClInclude Include="src\core\process.h" />
-    <ClInclude Include="src\core\include.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
