--- a/dllRifle.vcxproj.filters
+++ b/dllRifle.vcxproj.filters
@@ -24,16 +24,22 @@
     <ClCompile Include="src\core\process.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\core\dll.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\core\main.h" />
     <None Include="src\core\inject.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\core\include.h">
+    <ClInclude Include="src\core\process.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\core\process.h">
+    <ClInclude Include="src\core\dll.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\definition.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
