--- a/dllRifle.vcxproj.filters
+++ b/dllRifle.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\core\main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\core\inject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -27,9 +24,20 @@
     <ClCompile Include="src\core\dll.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\gui\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\gui\log.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\gui\proc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\gui\app.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\core\main.h" />
     <None Include="src\core\inject.h" />
   </ItemGroup>
   <ItemGroup>
@@ -39,8 +47,23 @@
     <ClInclude Include="src\core\dll.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\core\definition.h">
+    <ClInclude Include="src\define.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\gui\main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\gui\log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\gui\proc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\gui\app.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="..\..\processhacker\ProcessHacker\dllRifle.manifest" />
   </ItemGroup>
 </Project>
